[package]
name = "mnet"
version = "0.1.0"
authors = ["Maymomo <3466365807@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "~0.2.0-alpha.6"
error-chain = "0.12.1"

[dev-dependencies]
byteorder = "1.3.2"
